Fixed alignment of the show posters

--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -6,10 +6,11 @@
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-evenly;
-    align-items: flex-start;
+    align-items: stretch;
 }
 
 .movie {
+    position: relative;
     display: block;
     width: 250px;
     margin: 10px;
@@ -17,13 +18,12 @@
     border: 2px solid #b1b1b1;
     border-radius: 5px;
     color: #1d1d1d;
+    padding-bottom: 33px;
 }
 
 .movie__cover {
-    display: block;
     box-sizing: border-box;
     padding: 5px;
-    width: 250px;
 }
 
 .movie__details {
@@ -49,6 +49,9 @@
 }
 
 .movie__actions {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
